--- a/index.html
+++ b/index.html
@@ -1,186 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exchange Rate Calculator</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-   
-    <h1>Exchange Rate Calculator</h1>
-    <p>Choose the currency and the amounts to get the exchange rate</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Currency Converter</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
 
     <div class="container">
-      <div class="currency">
-        <select name="" id="currency-one">
-            <option value="AED">AED</option>
-            <option value="ARS">ARS</option>
-            <option value="AUD">AUD</option>
-            <option value="BGN">BGN</option>
-            <option value="BRL">BRL</option>
-            <option value="BSD">BSD</option>
-            <option value="CAD">CAD</option>
-            <option value="CHF">CHF</option>
-            <option value="CLP">CLP</option>
-            <option value="CNY">CNY</option>
-            <option value="COP">COP</option>
-            <option value="CZK">CZK</option>
-            <option value="DKK">DKK</option>
-            <option value="DOP">DOP</option>
-            <option value="EGP">EGP</option>
-            <option value="EUR">EUR</option>
-            <option value="FJD">FJD</option>
-            <option value="GBP">GBP</option>
-            <option value="GTQ">GTQ</option>
-            <option value="HKD">HKD</option>
-            <option value="HRK">HRK</option>
-            <option value="HUF">HUF</option>
-            <option value="IDR">IDR</option>
-            <option value="ILS">ILS</option>
-            <option value="INR">INR</option>
-            <option value="ISK">ISK</option>
-            <option value="JPY">JPY</option>
-            <option value="KRW">KRW</option>
-            <option value="KZT">KZT</option>
-            <option value="MXN">MXN</option>
-            <option value="MYR">MYR</option>
-            <option value="NGN">NGN (Naira)</option> <!-- Added Nigerian Naira -->
-            <option value="NOK">NOK</option>
-            <option value="NZD">NZD</option>
-            <option value="PAB">PAB</option>
-            <option value="PEN">PEN</option>
-            <option value="PHP">PHP</option>
-            <option value="PKR">PKR</option>
-            <option value="PLN">PLN</option>
-            <option value="PYG">PYG</option>
-            <option value="RON">RON</option>
-            <option value="RUB">RUB</option>
-            <option value="RWF">RWF (Rwandan Franc)</option> <!-- Added Rwandan Franc -->
-            <option value="SAR">SAR</option>
-            <option value="SEK">SEK</option>
-            <option value="SGD">SGD</option>
-            <option value="THB">THB</option>
-            <option value="TRY">TRY</option>
-            <option value="TWD">TWD</option>
-            <option value="UAH">UAH</option>
-            <option value="USD" selected>USD</option>
-            <option value="UYU">UYU</option>
-            <option value="VND">VND</option>
-            <option value="ZAR">ZAR</option>
-          </select>
-          
-        <input type="number" id="amount-one" placeholder="0" value="1" />
-      </div>
+        <h2>Exchange Rate Calculator</h2>
 
-      <div class="swap-rate-container">
-        <button class="btn" id="swap">
-          Swap
-        </button>
-        <div class="rate" id="rate"></div>
-      </div>
+        <!-- First Currency Section -->
+        <div class="currency-box">
+            <div class="currency-select">
+                <img id="flag-one" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvxiKha-t_xVuEkEWihSVsPxob2WSgAuPYqg&s" alt="Flag">
+                <select id="currency-one">
+                    <option value="USD" data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvxiKha-t_xVuEkEWihSVsPxob2WSgAuPYqg&s">USD - US Dollar</option>
+                    <option value="NGN" data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_eLzGgSG_9-nuUUqwQOo_2qUQYtlykNVlOQ&s">NGN - Nigerian Naira</option>
+                    <option value="RWF" data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtr4fq86nTmBMX9zHy78JsT2NttL6I2cUnVQ&s">RWF - Rwandan Franc</option>
+                </select>
+            </div>
+            <input  id="amount-one" >
+        </div>
 
-      <div class="currency">
-        <select name="" id="currency-two">
-            <option value="AED">AED</option>
-            <option value="ARS">ARS</option>
-            <option value="AUD">AUD</option>
-            <option value="BGN">BGN</option>
-            <option value="BRL">BRL</option>
-            <option value="BSD">BSD</option>
-            <option value="CAD">CAD</option>
-            <option value="CHF">CHF</option>
-            <option value="CLP">CLP</option>
-            <option value="CNY">CNY</option>
-            <option value="COP">COP</option>
-            <option value="CZK">CZK</option>
-            <option value="DKK">DKK</option>
-            <option value="DOP">DOP</option>
-            <option value="EGP">EGP</option>
-            <option value="EUR">EUR</option>
-            <option value="FJD">FJD</option>
-            <option value="GBP">GBP</option>
-            <option value="GTQ">GTQ</option>
-            <option value="HKD">HKD</option>
-            <option value="HRK">HRK</option>
-            <option value="HUF">HUF</option>
-            <option value="IDR">IDR</option>
-            <option value="ILS">ILS</option>
-            <option value="INR">INR</option>
-            <option value="ISK">ISK</option>
-            <option value="JPY">JPY</option>
-            <option value="KRW">KRW</option>
-            <option value="KZT">KZT</option>
-            <option value="MXN">MXN</option>
-            <option value="MYR">MYR</option>
-            <option value="NGN">NGN (Naira)</option> <!-- Added Nigerian Naira -->
-            <option value="NOK">NOK</option>
-            <option value="NZD">NZD</option>
-            <option value="PAB">PAB</option>
-            <option value="PEN">PEN</option>
-            <option value="PHP">PHP</option>
-            <option value="PKR">PKR</option>
-            <option value="PLN">PLN</option>
-            <option value="PYG">PYG</option>
-            <option value="RON">RON</option>
-            <option value="RUB">RUB</option>
-            <option value="RWF">RWF (Rwandan Franc)</option> <!-- Added Rwandan Franc -->
-            <option value="SAR">SAR</option>
-            <option value="SEK">SEK</option>
-            <option value="SGD">SGD</option>
-            <option value="THB">THB</option>
-            <option value="TRY">TRY</option>
-            <option value="TWD">TWD</option>
-            <option value="UAH">UAH</option>
-            <option value="USD" selected>USD</option>
-            <option value="UYU">UYU</option>
-            <option value="VND">VND</option>
-            <option value="ZAR">ZAR</option>
-          </select>
-          
-        <input type="number" id="amount-two" placeholder="0" />
-      </div>
+        <!-- Swap Button -->
+        <div class="swap-container">
+            <button id="swap">⬆⬇</button>
+        </div>
+
+        <!-- Second Currency Section -->
+        <div class="currency-box">
+            <div class="currency-select">
+                <img id="flag-two" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvxiKha-t_xVuEkEWihSVsPxob2WSgAuPYqg&s" alt="Flag">
+                <select id="currency-two">
+                    <option value="USD" data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvxiKha-t_xVuEkEWihSVsPxob2WSgAuPYqg&s">USD - US Dollar</option>
+              <option value="NGN" data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_eLzGgSG_9-nuUUqwQOo_2qUQYtlykNVlOQ&s">NGN - Nigerian Naira</option>
+                    <option value="RWF" data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtr4fq86nTmBMX9zHy78JsT2NttL6I2cUnVQ&s">RWF - Rwandan Franc</option>
+                </select>
+            </div>
+            <input id="amount-two" value="0" >
+        </div>
+
+        <!-- Exchange Rate Display -->
+        <p id="exchange-rate"></p>
     </div>
-    <script >
-        const currencyEl_one = document.getElementById("currency-one");
-const amountEl_one = document.getElementById("amount-one");
-const currencyEl_two = document.getElementById("currency-two");
-const amountEl_two = document.getElementById("amount-two");
-const rateEl = document.getElementById("rate");
-const swap = document.getElementById("swap");
 
-// Fetch exchange rates and update the DOM
-function calculate() {
-  const currency_one = currencyEl_one.value;
-  const currency_two = currencyEl_two.value;
-
-  fetch(`https://api.exchangerate-api.com/v4/latest/${currency_one}`)
-    .then((res) => res.json())
-    .then((data) => {
-      //console.log(data);
-      const rate = data.rates[currency_two];
-      console.log(rate);
-
-      rateEl.innerText = `1 ${currency_one} = ${rate} ${currency_two}`;
-
-      amountEl_two.value = (amountEl_one.value * rate).toFixed(2);
-    });
-}
-
-//Event listeners
-currencyEl_one.addEventListener("change", calculate);
-amountEl_one.addEventListener("input", calculate);
-currencyEl_two.addEventListener("change", calculate);
-amountEl_two.addEventListener("input", calculate);
-
-swap.addEventListener("click", () => {
-  const temp = currencyEl_one.value;
-  currencyEl_one.value = currencyEl_two.value;
-  currencyEl_two.value = temp;
-  calculate();
-});
-
-calculate();
-    </script>
-  </body>
+    <script src="script.js"></script>
+</body>
 </html>
