exchange money website

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Converter</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
     <div class="container">
@@ -14,14 +16,22 @@
         <!-- First Currency Section -->
         <div class="currency-box">
             <div class="currency-select">
-                <img id="flag-one" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvxiKha-t_xVuEkEWihSVsPxob2WSgAuPYqg&s" alt="Flag">
+                <img id="flag-one"
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvxiKha-t_xVuEkEWihSVsPxob2WSgAuPYqg&s"
+                    alt="Flag">
                 <select id="currency-one">
-                    <option value="USD" data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvxiKha-t_xVuEkEWihSVsPxob2WSgAuPYqg&s">USD - US Dollar</option>
-                    <option value="NGN" data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_eLzGgSG_9-nuUUqwQOo_2qUQYtlykNVlOQ&s">NGN - Nigerian Naira</option>
-                    <option value="RWF" data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtr4fq86nTmBMX9zHy78JsT2NttL6I2cUnVQ&s">RWF - Rwandan Franc</option>
+                    <option value="USD"
+                        data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvxiKha-t_xVuEkEWihSVsPxob2WSgAuPYqg&s">
+                        USD - US Dollar</option>
+                    <option value="NGN"
+                        data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_eLzGgSG_9-nuUUqwQOo_2qUQYtlykNVlOQ&s">
+                        NGN - Nigerian Naira</option>
+                    <option value="RWF"
+                        data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtr4fq86nTmBMX9zHy78JsT2NttL6I2cUnVQ&s">
+                        RWF - Rwandan Franc</option>
                 </select>
             </div>
-            <input  id="amount-one" >
+            <input id="amount-one">
         </div>
 
         <!-- Swap Button -->
@@ -32,14 +42,22 @@
         <!-- Second Currency Section -->
         <div class="currency-box">
             <div class="currency-select">
-                <img id="flag-two" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvxiKha-t_xVuEkEWihSVsPxob2WSgAuPYqg&s" alt="Flag">
+                <img id="flag-two"
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvxiKha-t_xVuEkEWihSVsPxob2WSgAuPYqg&s"
+                    alt="Flag">
                 <select id="currency-two">
-                    <option value="USD" data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvxiKha-t_xVuEkEWihSVsPxob2WSgAuPYqg&s">USD - US Dollar</option>
-              <option value="NGN" data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_eLzGgSG_9-nuUUqwQOo_2qUQYtlykNVlOQ&s">NGN - Nigerian Naira</option>
-                    <option value="RWF" data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtr4fq86nTmBMX9zHy78JsT2NttL6I2cUnVQ&s">RWF - Rwandan Franc</option>
+                    <option value="USD"
+                        data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvxiKha-t_xVuEkEWihSVsPxob2WSgAuPYqg&s">
+                        USD - US Dollar</option>
+                    <option value="NGN"
+                        data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_eLzGgSG_9-nuUUqwQOo_2qUQYtlykNVlOQ&s">
+                        NGN - Nigerian Naira</option>
+                    <option value="RWF"
+                        data-flag="	https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtr4fq86nTmBMX9zHy78JsT2NttL6I2cUnVQ&s">
+                        RWF - Rwandan Franc</option>
                 </select>
             </div>
-            <input id="amount-two" value="0" >
+            <input id="amount-two" value="0">
         </div>
 
         <!-- Exchange Rate Display -->
@@ -48,4 +66,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
